refactor: excluir tabela n usada e regra de negocio